<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:id="@+id/parent_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/text_expense_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/expense_name"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/text_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_remaining_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_amount"
            android:layout_marginTop="5dp"
            android:text="@string/remaining_amt"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/text_spent_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_amount"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:text="@string/spent_amt"
            android:textColor="@color/colorBlack" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>