<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.SettingFragment"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/switch_button_padding">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enable_income_amount_masking"
            android:layout_weight="2"
            android:paddingBottom="5dp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/income_amount_mask_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorOrange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/switch_button_padding">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/passwords_for_deleting_records"
            android:layout_weight="2"
            android:paddingBottom="5dp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/password_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>