<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/et_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_amount"
                android:inputType="number"
                android:layout_weight="1"
                android:background="@drawable/layout_edit_text_bg"
                android:gravity="center"
                android:padding="@dimen/dialog_edit_text_padding"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:id="@+id/layout_expense_name">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expense_name"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_expense_name"
                android:layout_weight="1"
                android:background="@drawable/layout_edit_text_bg"
                android:gravity="center"
                android:inputType="textFilter"
                android:padding="@dimen/dialog_edit_text_padding"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:id="@+id/description_layout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_description"
                android:layout_weight="1"
                android:background="@drawable/layout_edit_text_bg"
                android:gravity="center"
                android:inputType="textFilter"
                android:padding="@dimen/dialog_edit_text_padding"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_button_layout_margin_top"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/et_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_button_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_dialog_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_button_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>